# Soroka

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTEXT.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCKER_HUB_PUBLISH.md  DOCKER_SCRIPTS_README.md  Dockerfile  Dockerfile.optimized  EDUCATIONAL_TEMPLATES.md  EMPTY_PROTOCOL_FIX.md  EXTERNAL_FILE_CACHING_FIX.md  FULL_TEXT_MATCHING_OPTIMIZATION.md  IMPLEMENTATION_STATUS.md  JSON_SCHEMA_VALIDATION_FIX.md  LLM_DATA_TRANSFER_VERIFICATION_SUMMARY.md  LLM_OPTIMIZATION_README.md  Makefile  OD_PROTOCOL_QUICKSTART.md  PARTICIPANT_MATCHING_FIX_QUICKSTART.md  PRODUCT.md  README.md  README_ru.md  RUN_WITH_SYSTEMD.md  TESTING.md  WARP.md  analyze_image.sh  build-multi-platform.sh  build-optimized.sh  build.sh  config.py  database.py  diarization.py  docker-compose.nas.yml  docker-compose.prod.yml  docker-compose.yml  docker-logs.sh  docker-run.sh  (+23 more)
.cursor/: plan_smart_default.md
docs/: APPLE_SILICON_GUIDE.md  AUTO_DETECT_PARTICIPANTS_IMPLEMENTATION.md  AZURE_SCHEMA_FIX.md  BUGFIX_SMART_DEFAULT.md  CACHE_TESTING.md  CACHE_TESTING_REPORT.md  CHANGELOG_FLOOD_CONTROL_FIX.md  CHANGELOG_PARTICIPANTS_FIX.md  CLOUD_TRANSCRIPTION_GUIDE.md  COMPLETE_IMPROVEMENTS_SUMMARY.md  CONFIGURATION.md  CONSOLIDATED_ARCHITECTURE.md  CONSOLIDATED_MIGRATION_GUIDE.md  CRITICAL_FIXES.md  DEEPGRAM_INTEGRATION.md  DEEPGRAM_PYDANTIC_FIX.md  DIARIZATION_WARNINGS_FIX.md  DOCKER_GUIDE.md  DOCUMENTATION_ORGANIZATION.md  EVENT_LOOP_FIX.md  FILE_SIZE_LIMITS_FIX.md  FLOOD_CONTROL_FIX.md  FLOOD_CONTROL_FIX_SUMMARY.md  FLOOD_CONTROL_IMPLEMENTATION_SUMMARY.md  FLOOD_CONTROL_PROGRESS_FIX.md  FLOOD_CONTROL_QUICKSTART.md  HEALTH_CHECK_LLM_FIX.md  HYBRID_APPROACH_DIAGRAM.md  HYBRID_PICOVOICE_EXPLANATION.md  INDEX.md  (+64 more)
(+318 files in other folders)
