[project]
name = "soroka"
version = "1.0.0"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "."]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",  # line too long — relax during migration
    # Whitespace tech debt — codebase predates ruff enforcement.
    "W291",  # trailing-whitespace
    "W292",  # missing-newline-at-end-of-file
    "W293",  # blank-line-with-whitespace
    # Style tech debt — many existing call sites, address incrementally.
    "E722",  # bare-except
    "E741",  # ambiguous-variable-name
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = false
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "live_synology: живой тест против реального NAS (нужна SYNOLOGY_LIVE_SHARE_URL)",
]
